--- a/中转站/MX2/index.html
+++ b/中转站/MX2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/pc.css">
-    <title>MX</title>
+    <title>ManBetX万博-免费提供在线体育电竞精彩赛事直播</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
             </div>
         </a>
-        <a href="https://www.360.cn/" target="_blank">
+        <!-- <a href="https://www.360.cn/" target="_blank">
             <div class="img_div2 bot_btn">
 
             </div>
@@ -36,7 +36,7 @@
             <div class="img_div2 bot_btn2">
 
             </div>
-        </a>
+        </a> -->
     </div>
 </body>
 <script src="./js/pc.js"></script>
