--- a/中转站/MX2/web.html
+++ b/中转站/MX2/web.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MX</title>
+    <title>ManBetX万博-免费提供在线体育电竞精彩赛事直播</title>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/web.css">
 </head>
@@ -24,16 +24,6 @@
         </a>
         <a href="https://www.baidu.com/" target="_blank">
             <div class="img_div ios">
-
-            </div>
-        </a>
-        <a href="https://www.baidu.com/" target="_blank">
-            <div class="img_div2 full2">
-
-            </div>
-        </a>
-        <a href="https://www.baidu.com/" target="_blank">
-            <div class="img_div2 full3">
 
             </div>
         </a>
