--- a/中转站/MX2/index.html
+++ b/中转站/MX2/index.html
@@ -27,6 +27,11 @@
 
             </div>
         </a>
+        <a href="https://www.iqiyi.com/" target="_blank">
+            <div class="banner">
+
+            </div>
+        </a>
         <!-- <a href="https://www.360.cn/" target="_blank">
             <div class="img_div2 bot_btn">
 
@@ -39,17 +44,43 @@
         </a> -->
     </div>
 </body>
-<script src="./js/pc.js"></script>
+<!-- <script src="./js/pc.js"></script> -->
 <script>
     (function (n, e) {
         var t = n.documentElement,
             i = "orientationchange" in window ? "orientationchange" : "resize",
             d = function () {
                 var n = t.clientWidth;
-                n && (t.style.fontSize = n / 9.6 + "px")
+                n && (t.style.fontSize = n / 9.6 + "px");
             };
-        n.addEventListener && (e.addEventListener(i, d, !1), n.addEventListener("DOMContentLoaded", d, !1))
+        n.addEventListener &&
+            (e.addEventListener(i, d, !1),
+                n.addEventListener("DOMContentLoaded", d, !1));
     })(document, window);
+
+    function equi() {
+        var ua = navigator.userAgent;
+        var isWindowsPhone = /(?:Windows Phone)/.test(ua);
+        var isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone;
+        var isAndroid = /(?:Android)/.test(ua);
+        var isFireFox = /(?:Firefox)/.test(ua);
+        // var isChrome = /(?:Chrome|CriOS)/.test(ua);
+        var isTablet =
+            /(?:iPad|PlayBook)/.test(ua) ||
+            (isAndroid && !/(?:Mobile)/.test(ua)) ||
+            (isFireFox && /(?:Tablet)/.test(ua));
+        // window模拟器环境始终为false
+        var isIOSMobile =
+            /iPad|iPhone|iPod/.test(navigator.platform) ||
+            (navigator.platform === "MacIntel" && navigator.maxTouchPoints > 1);
+        var isPhone = /(?:iPhone)/.test(ua) && !isTablet;
+        var isPc = !isPhone && !isAndroid && !isSymbian && !isTablet;
+        return isPc ? (!isIOSMobile ? true : false) : false;
+    }
+    var isWeb = equi(); //是否是pc端
+    if (!isWeb) {
+        window.location.href = "./web.html";
+    }
 </script>
 
 </html>
