--- a/中转站/MX2/web.html
+++ b/中转站/MX2/web.html
@@ -27,19 +27,48 @@
 
             </div>
         </a>
+        <a href="https://www.baidu.com/" target="_blank">
+            <div class="banner">
+
+            </div>
+        </a>
     </div>
 </body>
-<script src="./js/pc.js"></script>
 <script>
     (function (n, e) {
-        var t = n.documentElement,
-            i = "orientationchange" in window ? "orientationchange" : "resize",
-            d = function () {
-                var n = t.clientWidth;
-                n && (t.style.fontSize = n / 7.5 + "px")
-            };
-        n.addEventListener && (e.addEventListener(i, d, !1), n.addEventListener("DOMContentLoaded", d, !1))
+      var t = n.documentElement,
+        i = "orientationchange" in window ? "orientationchange" : "resize",
+        d = function () {
+          var n = t.clientWidth;
+          n && (t.style.fontSize = n / 7.5 + "px");
+        };
+      n.addEventListener &&
+        (e.addEventListener(i, d, !1),
+        n.addEventListener("DOMContentLoaded", d, !1));
     })(document, window);
-</script>
+    function equi() {
+      var ua = navigator.userAgent;
+      var isWindowsPhone = /(?:Windows Phone)/.test(ua);
+      var isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone;
+      var isAndroid = /(?:Android)/.test(ua);
+      var isFireFox = /(?:Firefox)/.test(ua);
+      // var isChrome = /(?:Chrome|CriOS)/.test(ua);
+      var isTablet =
+        /(?:iPad|PlayBook)/.test(ua) ||
+        (isAndroid && !/(?:Mobile)/.test(ua)) ||
+        (isFireFox && /(?:Tablet)/.test(ua));
+      // window模拟器环境始终为false
+      var isIOSMobile =
+        /iPad|iPhone|iPod/.test(navigator.platform) ||
+        (navigator.platform === "MacIntel" && navigator.maxTouchPoints > 1);
+      var isPhone = /(?:iPhone)/.test(ua) && !isTablet;
+      var isPc = !isPhone && !isAndroid && !isSymbian && !isTablet;
+      return isPc ? (!isIOSMobile ? true : false) : false;
+    }
+    var isWeb = equi(); //是否是pc端
+    if (isWeb) {
+      window.location.href = "./index.html";
+    }
+  </script>
 
 </html>
