--- a/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/index.html
+++ b/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/index.html
@@ -6,11 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/pc.css">
-    <title>pc</title>
+    <meta name="keywords" content="乐动体育，乐动体育app，乐动体育直播">
+    <meta name="description" content="乐动体育—全球赛事免费看，高清直播无广告。乐动体育直播提供足球、NBA、电竞、网球等全球赛事直播竞猜，追求高清、稳定、流畅的直播体验，还可与主播一起零距离互动。">
+    <title>乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事</title>
+    <style>
+        #boby {
+            background-image: url('./img/bg.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            min-height: 14.515rem;
+            position: relative;
+        }
+
+        #and {
+            background-image: url('./img/an-btn1@2x.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            width: 1.995rem;
+            height: 0.555rem;
+            position: absolute;
+            right: 1.71rem;
+            top: 3.08rem;
+        }
+
+        #and:hover {
+            background-image: url('./img/an-btn2@2x.png');
+        }
+
+        #ios {
+            background-image: url('./img/ios-btn1@2x.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            width: 1.995rem;
+            height: 0.555rem;
+            position: absolute;
+            right: 1.71rem;
+            top: 2.21rem;
+        }
+
+        #ios:hover {
+            background-image: url('./img/ios-btn2@2x.png');
+        }
+    </style>
 </head>
 
 <body>
-    pc
+    <div id="boby">
+        <a href="">
+            <div id="and">
+
+            </div>
+        </a>
+        <a href="">
+            <div id="ios">
+
+            </div>
+        </a>
+    </div>
 </body>
 <script src="./js/pc.js"></script>
 <script>
