--- a/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
+++ b/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
@@ -4,13 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web</title>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/web.css">
+    <meta name="keywords" content="乐动体育，乐动体育app，乐动体育直播">
+    <meta name="description" content="乐动体育—全球赛事免费看，高清直播无广告。乐动体育直播提供足球、NBA、电竞、网球等全球赛事直播竞猜，追求高清、稳定、流畅的直播体验，还可与主播一起零距离互动。">
+    <title>乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事</title>
+    <style>
+        #boby {
+            background-image: url('./img/web/bg2.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            min-height: 28.85rem;
+            position: relative;
+        }
+
+        #and {
+            background-image: url('./img/web/xiazai2@2x.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            width: 2.58rem;
+            height: 0.86rem;
+            position: absolute;
+            right: 0.96rem;
+            top: 14.87rem;
+        }
+
+        #and:hover {
+            background-image: url('./img/web/xiazai2-@2x.png');
+        }
+
+        #ios {
+            background-image: url('./img/web/xaixai1-@2x.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            width: 2.58rem;
+            height: 0.86rem;
+            position: absolute;
+            left: 0.96rem;
+            top: 14.87rem;
+        }
+
+        #ios:hover {
+            background-image: url('./img/web/xaizai1@2x.png');
+        }
+    </style>
 </head>
 
 <body>
-    web
+    <div id="boby">
+        <div id="ios"></div>
+        <div id="and"></div>
+    </div>
 </body>
 <script src="./js/pc.js"></script>
 <script>
