--- a/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
+++ b/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/web.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.esm.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.esm.bundle.js"></script>
     <meta name="keywords" content="乐动体育，乐动体育app，乐动体育直播">
     <meta name="description" content="乐动体育—全球赛事免费看，高清直播无广告。乐动体育直播提供足球、NBA、电竞、网球等全球赛事直播竞猜，追求高清、稳定、流畅的直播体验，还可与主播一起零距离互动。">
     <title>乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事</title>
@@ -47,26 +52,128 @@
         #ios:hover {
             background-image: url('./img/web/xaizai1@2x.png');
         }
+
+        #swiperdiv {
+            position: absolute;
+            top: 16.46rem;
+            width: 100%;
+        }
+
+        .swimg {
+            width: 3.01rem;
+            height: 4.01rem;
+        }
     </style>
 </head>
 
 <body>
     <div id="boby">
-        <div id="ios"></div>
-        <div id="and"></div>
+        <a href="https://www.baidu.com/">
+            <div id="ios"></div>
+        </a>
+        <a href="https://www.baidu.com/">
+            <div id="and"></div>
+        </a>
+        <div id="swiperdiv">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="https://www.baidu.com/">
+                            <img src="./img/web/CBA@2x.png" alt="" class="swimg">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.baidu.com/">
+                            <img src="./img/web/dainzijingji@2x.png" alt="" class="swimg">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.baidu.com/">
+                            <img src="./img/web/tu1@2x.png" alt="" class="swimg">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.baidu.com/">
+                            <img src="./img/web/wudaliansai@2x.png" alt="" class="swimg">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="./js/pc.js"></script>
+<script>
+    // var swiper1 = new Swiper(".swiper-container", {
+    //     effect: "coverflow",
+    //     grabCursor: true,
+    //     centeredSlides: true,
+    //     loop: true,
+    //     slidesPerView: "auto",
+    //     coverflowEffect: {
+    //         rotate: 50,
+    //         stretch: 0,
+    //         depth: 200,
+    //         modifier: 1.5,
+    //         slideShadows: true
+    //     },
+    //     autoplay: true,
+    //     delay: 2000,
+    //     slider: 3000
+    // });
+    var mySwiper = new Swiper('.swiper-container', {
+        effect: 'coverflow',
+        slidesPerView: 5,
+        centeredSlides: true,
+        initialSlide: 1,
+        // loop: true,
+        // slidesPerView: "auto",
+        coverflowEffect: {
+            rotate: 30,
+            stretch: 10,
+            depth: 60,
+            modifier: 2,
+            slideShadows: true
+        },
+        autoplay: 1000
+    })
+</script>
 <script>
     (function (n, e) {
         var t = n.documentElement,
             i = "orientationchange" in window ? "orientationchange" : "resize",
             d = function () {
                 var n = t.clientWidth;
-                n && (t.style.fontSize = n / 7.5 + "px")
+                n && (t.style.fontSize = n / 7.5 + "px");
             };
-        n.addEventListener && (e.addEventListener(i, d, !1), n.addEventListener("DOMContentLoaded", d, !1))
+        n.addEventListener &&
+            (e.addEventListener(i, d, !1),
+                n.addEventListener("DOMContentLoaded", d, !1));
     })(document, window);
+
+    function equi() {
+        var ua = navigator.userAgent;
+        var isWindowsPhone = /(?:Windows Phone)/.test(ua);
+        var isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone;
+        var isAndroid = /(?:Android)/.test(ua);
+        var isFireFox = /(?:Firefox)/.test(ua);
+        // var isChrome = /(?:Chrome|CriOS)/.test(ua);
+        var isTablet =
+            /(?:iPad|PlayBook)/.test(ua) ||
+            (isAndroid && !/(?:Mobile)/.test(ua)) ||
+            (isFireFox && /(?:Tablet)/.test(ua));
+        // window模拟器环境始终为false
+        var isIOSMobile =
+            /iPad|iPhone|iPod/.test(navigator.platform) ||
+            (navigator.platform === "MacIntel" && navigator.maxTouchPoints > 1);
+        var isPhone = /(?:iPhone)/.test(ua) && !isTablet;
+        var isPc = !isPhone && !isAndroid && !isSymbian && !isTablet;
+        return isPc ? (!isIOSMobile ? true : false) : false;
+    }
+    var isWeb = equi(); //是否是pc端
+    if (isWeb) {
+        window.location.href = "./index.html";
+    }
 </script>
 
 </html>
