--- a/中转站/LD/web.html
+++ b/中转站/LD/web.html
@@ -3,22 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ManBetX万博-免费提供在线体育电竞精彩赛事直播</title>
+    <title>yd</title>
     <link rel="stylesheet" href="./style/index.css" />
-    <link rel="stylesheet" href="./style/web.css" />
+    <style>
+      .MX{
+        position: relative;
+        background-image: url('./image/h5/LD@2x.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        min-height: 23.93rem;
+      }
+      .ios{
+        background-image: url('./image/h5/but1@2x.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        width: 4.47rem;
+        height: 0.89rem;
+        position: absolute;
+        top: 7.02rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+      .and{
+        background-image: url('./image/h5/but2@2x.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        width: 4.47rem;
+        height: 0.89rem;
+        position: absolute;
+        top: 8.21rem;
+        left: 0rem;
+        right: 0;
+        margin: auto;
+      }
+      .wz{
+        background-image: url('./image/h5/but3@2x.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        width: 4.47rem;
+        height: 0.89rem;
+        position: absolute;
+        top: 9.4rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+    </style>
   </head>
 
   <body>
     <div class="MX">
-      <img src="./image/h5/bj.jpg" alt="" class="bgimg" />
-      <a href="https://www.baidu.com/" target="_blank">
-        <div class="img_div full"></div>
+      <a href="https://www.baidu.com/">
+        <div class="ios"></div>
       </a>
-      <a href="https://www.baidu.com/" target="_blank">
-        <div class="img_div and"></div>
+      <a href="https://www.baidu.com/">
+        <div class="and"></div>
       </a>
-      <a href="https://www.baidu.com/" target="_blank">
-        <div class="img_div ios"></div>
+      <a href="https://www.baidu.com/">
+        <div class="wz"></div>
       </a>
     </div>
   </body>
