--- a/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
+++ b/中转站/乐动体育APP-乐动体育直播-免费app下载看全球顶级赛事/web.html
@@ -34,9 +34,9 @@
             top: 14.87rem;
         }
 
-        #and:hover {
+        /* #and:hover {
             background-image: url('./img/web/xiazai2-@2x.png');
-        }
+        } */
 
         #ios {
             background-image: url('./img/web/xaixai1-@2x.png');
@@ -49,9 +49,9 @@
             top: 14.87rem;
         }
 
-        #ios:hover {
+        /* #ios:hover {
             background-image: url('./img/web/xaizai1@2x.png');
-        }
+        } */
 
         #swiperdiv {
             position: absolute;
@@ -78,24 +78,16 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="https://www.baidu.com/">
-                            <img src="./img/web/CBA@2x.png" alt="" class="swimg">
-                        </a>
+                        <img src="./img/web/CBA@2x.png" alt="" class="swimg">
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://www.baidu.com/">
-                            <img src="./img/web/dainzijingji@2x.png" alt="" class="swimg">
-                        </a>
+                        <img src="./img/web/dainzijingji@2x.png" alt="" class="swimg">
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://www.baidu.com/">
-                            <img src="./img/web/tu1@2x.png" alt="" class="swimg">
-                        </a>
+                        <img src="./img/web/tu1@2x.png" alt="" class="swimg">
                     </div>
                     <div class="swiper-slide">
-                        <a href="https://www.baidu.com/">
-                            <img src="./img/web/wudaliansai@2x.png" alt="" class="swimg">
-                        </a>
+                        <img src="./img/web/wudaliansai@2x.png" alt="" class="swimg">
                     </div>
                 </div>
             </div>
@@ -104,23 +96,6 @@
 </body>
 <script src="./js/pc.js"></script>
 <script>
-    // var swiper1 = new Swiper(".swiper-container", {
-    //     effect: "coverflow",
-    //     grabCursor: true,
-    //     centeredSlides: true,
-    //     loop: true,
-    //     slidesPerView: "auto",
-    //     coverflowEffect: {
-    //         rotate: 50,
-    //         stretch: 0,
-    //         depth: 200,
-    //         modifier: 1.5,
-    //         slideShadows: true
-    //     },
-    //     autoplay: true,
-    //     delay: 2000,
-    //     slider: 3000
-    // });
     var mySwiper = new Swiper('.swiper-container', {
         effect: 'coverflow',
         slidesPerView: 5,
