--- a/中转站/ld落地页/index.html
+++ b/中转站/ld落地页/index.html
@@ -13,79 +13,44 @@
       position: relative;
       background-size: 100%;
       background-repeat: no-repeat;
-      background-image: url('./image/pc-bg.png');
+      background-image: url('./image/bg.png');
     }
 
-    .kefu {
-      position: absolute;
-      top: 3.84rem;
-      right: 1.105rem;
-      width: 0.835rem;
-      height: 0.23rem;
-      background-image: url('./image/service1@2x.png');
-      background-size: 100%;
-      background-repeat: no-repeat;
-    }
-
-    .kefu:hover {
-      background-image: url('./image/service2@2x.png');
-    }
 
     .ios {
-      width: 1.9rem;
-      height: 0.45rem;
-      background-image: url('./image/btn1@2x.png');
+      width: 2.05rem;
+      height: 0.57rem;
+      background-image: url('./image/btn-1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 4.2rem;
-      right: 3.215rem;
+      top: 4.275rem;
+      left: 2.325rem;
     }
 
     .ios:hover {
-      background-image: url('./image/btn1-1@2x.png');
+      background-image: url('./image/btn-1-1@2x.png');
     }
 
     .and {
-      width: 1.9rem;
-      height: 0.45rem;
-      background-image: url('./image/btn2@2x.png');
+      width: 2.05rem;
+      height: 0.57rem;
+      background-image: url('./image/btn-2@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 4.2rem;
-      right: 0.58rem;
+      top: 4.275rem;
+      left: 5.51rem;
     }
 
     .and:hover {
-      background-image: url('./image/btn2-2@2x.png');
-
-    }
-
-    .app {
-      width: 1.585rem;
-      height: 0.38rem;
-      background-image: url('./image/btn3@2x.png');
-      background-size: 100%;
-      background-repeat: no-repeat;
-      position: absolute;
-      top: 4.25rem;
-      right: 0.27rem;
-    }
-
-    .app:hover {
-      background-image: url('./image/btn3-3@2x.png');
+      background-image: url('./image/btn-2-2@2x.png');
     }
   </style>
 </head>
 
 <body>
   <div class="pc">
-    <a href="http://baidu.com/">
-      <div class="kefu">
-
-      </div>
-    </a>
     <a href="http://baidu.com/">
       <div class="ios">
 
