--- a/中转站/ld落地页/web.html
+++ b/中转站/ld落地页/web.html
@@ -10,42 +10,33 @@
   <style>
     .MX {
       position: relative;
-      background-image: url('./image/h5/LD@2x.png');
+      background-image: url('./image/h5/bg.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      min-height: 37.87rem;
+      min-height: 16rem;
     }
 
     .ios {
-      background-image: url('./image/h5/but1@2x.png');
+      background-image: url('./image/h5/btn-1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      width: 4.47rem;
-      height: 0.89rem;
+      width: 5.31rem;
+      height: 1.44rem;
       margin: auto;
     }
 
     .and {
-      background-image: url('./image/h5/but2@2x.png');
+      background-image: url('./image/h5/btn-2@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      width: 4.47rem;
-      height: 0.89rem;
-      margin:0.3rem auto;
-    }
-
-    .wz {
-      background-image: url('./image/h5/but3@2x.png');
-      background-size: 100%;
-      background-repeat: no-repeat;
-      width: 4.47rem;
-      height: 0.89rem;
+      width: 5.31rem;
+      height: 1.44rem;
       margin:0.3rem auto;
     }
 
     .box {
       position: absolute;
-      top: 9.21rem;
+      top: 9.74rem;
       left: 0;
       right: 0;
       margin: auto;
@@ -57,15 +48,11 @@
 <body>
   <div class="MX">
     <div class="box">
-
       <a href="https://www.baidu.com/">
         <div class="ios"></div>
       </a>
       <a href="https://www.baidu.com/">
         <div class="and"></div>
-      </a>
-      <a href="" class="app">
-        <div class="wz"></div>
       </a>
     </div>
   </div>
