--- a/中转站/ldnews/index.html
+++ b/中转站/ldnews/index.html
@@ -9,7 +9,7 @@
   <style>
     .pc {
       width: 100%;
-      min-height: 7.5rem;
+      min-height: 5.4rem;
       position: relative;
       background-size: 100%;
       background-repeat: no-repeat;
@@ -24,12 +24,14 @@
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 4.275rem;
-      left: 2.325rem;
+      top: 4.62rem;
+      left: 0;
+      right: 0;
+      margin: auto;
     }
 
     .ios:hover {
-      background-image: url('./image/btn-1-1@2x.png');
+      background-image: url('./image/btn-2@2x.png');
     }
 
     .and {
@@ -51,16 +53,16 @@
 
 <body>
   <div class="pc">
-    <a href="http://baidu.com/">
+    <a href="https://189ld.com/?proxy=vtyfkw">
       <div class="ios">
 
       </div>
     </a>
-    <a href="http://baidu.com/">
+    <!-- <a href="http://baidu.com/">
       <div class="and">
 
       </div>
-    </a>
+    </a> -->
   </div>
 </body>
 <script>
