--- a/中转站/ldnews/web.html
+++ b/中转站/ldnews/web.html
@@ -13,11 +13,13 @@
       background-image: url('./image/h5/bg.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      min-height: 16rem;
+      height: 100%;
+      background-color: #03357c;
+      /* min-height: 16rem; */
     }
 
     .ios {
-      background-image: url('./image/h5/btn-1@2x.png');
+      background-image: url('./image/h5/but-@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       width: 5.31rem;
@@ -36,7 +38,7 @@
 
     .box {
       position: absolute;
-      top: 9.74rem;
+      top: 11.46rem;
       left: 0;
       right: 0;
       margin: auto;
@@ -48,12 +50,12 @@
 <body>
   <div class="MX">
     <div class="box">
-      <a href="https://www.baidu.com/">
+      <a href="https://189ld.com/?proxy=vtyfkw">
         <div class="ios"></div>
       </a>
-      <a href="https://www.baidu.com/">
+      <!-- <a href="https://www.baidu.com/">
         <div class="and"></div>
-      </a>
+      </a> -->
     </div>
   </div>
 </body>
