--- a/中转站/mx落地/index.html
+++ b/中转站/mx落地/index.html
@@ -53,12 +53,12 @@
 
 <body>
   <div class="pc">
-    <a href="https://189ld.com/?proxy=vtyfkw">
+    <a href="https://www.baidu.com/">
       <div class="ios">
 
       </div>
     </a>
-    <a href="http://baidu.com/">
+    <a href="https://smbo8.cn/">
       <div class="and">
 
       </div>
