--- a/中转站/mx落地/web.html
+++ b/中转站/mx落地/web.html
@@ -50,10 +50,10 @@
 <body>
   <div class="MX">
     <div class="box">
-      <a href="https://189ld.com/?proxy=vtyfkw">
+      <a href="https://www.baidu.com/">
         <div class="ios"></div>
       </a>
-      <a href="https://www.baidu.com/">
+      <a href="https://smbo8.cn/">
         <div class="and"></div>
       </a>
     </div>
