--- a/配置/418edm/ld31.net/index.html
+++ b/配置/418edm/ld31.net/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>ldsports</title>
     <style>
     </style>
@@ -15,34 +15,34 @@
 <body>
     <div id="pc">
         <div class="full">
-            <img class="fullbg" src="../image/bg.png" alt="">
+            <img class="fullbg" src="./image/bg.png" alt="">
             <div class="pcqq1">
-                <!-- <img src="../image/qqpc1.png" alt=""> -->
+                <!-- <img src="./image/qqpc1.png" alt=""> -->
                 联系QQ:3295319197
             </div>
             <div class="pcqq2">
-                <!-- <img src="../image/qqpc2.png" alt=""> -->
+                <!-- <img src="./image/qqpc2.png" alt=""> -->
                 更多续存优惠请联系客服QQ:3295319197
             </div>
             <!-- 网页版入口 -->
-            <a href="https://ledong89.bet/">
+            <a href="https://ledong92.bet/">
                 <div class="pcenter"></div>
             </a>
         </div>
     </div>
     <div id="h5">
         <div class="h5full">
-            <img class="h5fullbg" src="../image/h5bg.png" alt="">
+            <img class="h5fullbg" src="./image/h5bg.png" alt="">
             <!-- 网页版入口 -->
-            <a href="https://ledong89.bet/">
+            <a href="https://ledong92.bet/">
                 <div class="h5enter"></div>
             </a>
             <div class="h5qq1">
-                <!-- <img src="../image/qqh51.png" alt=""> -->
+                <!-- <img src="./image/qqh51.png" alt=""> -->
                 加QQ:3295319197免费领取礼金
             </div>
             <div class="h5qq2">
-                <!-- <img src="../image/qqh52.png" alt=""> -->
+                <!-- <img src="./image/qqh52.png" alt=""> -->
                 更多续存优惠请联系客服QQ:3295319197
             </div>
         </div>
