--- a/中转站/420mx/mxscbmd01/index.html
+++ b/中转站/420mx/mxscbmd01/index.html
@@ -9,7 +9,7 @@
   <style>
     .pc {
       width: 100%;
-      min-height: 11.23rem;
+      min-height: 12.5rem;
       position: relative;
       background-size: 100%;
       background-repeat: no-repeat;
@@ -18,30 +18,30 @@
 
 
     .ios {
-      width: 2.74rem;
-      height: 0.265rem;
-      /* background-image: url('./image/qq@2x.png'); */
+      width: 4.88rem;
+      height: 0.44rem;
+      background-image: url('./image/客服QQ-564030002@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 2.11rem;
-      left: 3.43rem;
+      top: 4.3rem;
+      left: 11.35rem;
       color: #f8d587;
     }
 
 
     .and {
-      width: 4.01rem;
-      height: 0.85rem;
+      width: 3.99rem;
+      height: 1.11rem;
       background-image: url('./image/btn1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 7.84rem;
-      right: 3.14rem;
+      top: 9.08rem;
+      right: 3.41rem;
     }
     .and:hover{
-      background-image: url('./image/btn2@2x.png');
+      background-image: url('./image/btn1-1@2x.png');
     }
     .bbox{
       position: absolute;
@@ -56,12 +56,11 @@
 <body>
   <div class="pc">
     <div class="ios">
-      联系QQ:93974457
     </div>
     <div class="bbox">
       更多优惠请联系客服QQ：93974457
     </div>
-    <a href="https://ld106.com/">
+    <a href="https://iman399.com/">
       <div class="and">
       </div>
     </a>
