--- a/中转站/420mx/mxscbmd01/web.html
+++ b/中转站/420mx/mxscbmd01/web.html
@@ -13,27 +13,34 @@
       background-image: url('./image/h5/bg.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      min-height: 19.92rem;
+      min-height: 16.24rem;
     }
 
     .ios {
       background-image: url('./image/h5/btn1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      width: 5.9rem;
-      height: 1.25rem;
+      width:6.13rem;
+      height: 1.44rem;
       position: absolute;
       left: 0;
       right: 0;
-      top: 9.47rem;
+      top: 13.34rem;
       margin: auto;
     }
 
     .tbox {
+      background-image: url('./image/h5/客服QQ-564030002@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
       position: absolute;
-      top: 3.58rem;
+      width: 4.8rem;
+      height: .44rem;
+      top: 6.96rem;
       font-size: 0.41rem;
-      left: 0.9rem;
+      left: 0rem;
+      right: 0;
+      margin: auto;
       color: rgb(248, 213, 135);
       text-align: center;
     }
@@ -51,12 +58,12 @@
 <body>
   <div class="MX">
     <div class="tbox">
-      加QQ:93974457免费领取礼金
+      
     </div>
-    <div class="bbox">
+    <!-- <div class="bbox">
       更多优惠请联系客服QQ:93974457
-    </div>
-    <a href="https://ld106.com/">
+    </div> -->
+    <a href="https://iman399.com/">
       <div class="ios"></div>
     </a>
   </div>
