--- a/中转站/422落地/index.html
+++ b/中转站/422落地/index.html
@@ -18,35 +18,57 @@
 
 
     .ios {
-      width: 4.88rem;
-      height: 0.44rem;
-      background-image: url('./image/客服QQ-564030002@2x.png');
-      background-size: 100%;
-      background-repeat: no-repeat;
-      position: absolute;
-      top: 4.3rem;
-      left: 11.35rem;
-      color: #f8d587;
-    }
-
-
-    .and {
-      width: 3.99rem;
-      height: 1.11rem;
+      width: 4.11rem;
+      height: 0.95rem;
       background-image: url('./image/btn1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      top: 9.08rem;
-      right: 3.41rem;
+      top: 9.1rem;
+      left: 9.97rem;
+      color: #f8d587;
     }
-    .and:hover{
-      background-image: url('./image/btn1-1@2x.png');
+
+    .ios:hover {
+      background-image: url('./image/btn2@2x.png');
     }
-    .bbox{
+
+    .and {
+      width: 4.11rem;
+      height: 0.95rem;
+      background-image: url('./image/btn11@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
       position: absolute;
-      top: 8.26rem;
-      left: 2.37rem;
+      top: 9.1rem;
+      right: 0.57rem;
+    }
+
+    .and:hover {
+      background-image: url('./image/btn22@2x.png');
+    }
+
+    .bbox {
+      width: 3.3rem;
+      height: 0.43rem;
+      position: absolute;
+      background: url('./image/qq1@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      top: 2.02rem;
+      left: 3.39rem;
+      color: #3691f9;
+      font-size: 0.3rem;
+    }
+    .bbox2{
+      width: 5.56rem;
+      height: 0.33rem;
+      position: absolute;
+      background: url('./image/qq2@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      top: 9.68rem;
+      left: 2.21rem;
       color: #3691f9;
       font-size: 0.3rem;
     }
@@ -55,15 +77,20 @@
 
 <body>
   <div class="pc">
-    <div class="ios">
-    </div>
-    <div class="bbox">
-      更多优惠请联系客服QQ：93974457
-    </div>
-    <a href="https://iman399.com/">
+    <a href="https://cba988.cc/ ">
+      <div class="ios">
+      </div>
+    </a>
+    <a href="https://smtv.io">
       <div class="and">
       </div>
     </a>
+    <div class="bbox">
+
+    </div>
+    <div class="bbox2">
+
+    </div>
   </div>
 </body>
 <script>
