--- a/中转站/422落地/web.html
+++ b/中转站/422落地/web.html
@@ -13,30 +13,42 @@
       background-image: url('./image/h5/bg.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      min-height: 16.24rem;
+      min-height: 20.47rem;
     }
 
     .ios {
-      background-image: url('./image/h5/btn1@2x.png');
+      background-image: url('./image/h5/btm1-1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      width:6.13rem;
-      height: 1.44rem;
+      width:6.03rem;
+      height: 1.16rem;
       position: absolute;
       left: 0;
       right: 0;
-      top: 13.34rem;
+      top: 5.73rem;
       margin: auto;
     }
 
+    .and {
+      background-image: url('./image/h5/btm2-2@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      width:6.03rem;
+      height: 1.16rem;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 7.18rem;
+      margin: auto;
+    }
     .tbox {
-      background-image: url('./image/h5/客服QQ-564030002@2x.png');
+      background-image: url('./image/h5/qq1@2x.png');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
-      width: 4.8rem;
-      height: .44rem;
-      top: 6.96rem;
+      width: 6.61rem;
+      height: .50rem;
+      top: 5.02rem;
       font-size: 0.41rem;
       left: 0rem;
       right: 0;
@@ -45,12 +57,19 @@
       text-align: center;
     }
     .bbox{
-      width: 100%;
-      color: rgb(226,216,168);
-      font-size: 0.4rem;
-      text-align: center;
+      background-image: url('./image/h5/qq2@2x.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
       position: absolute;
-      top: 14.5rem;
+      width: 6.61rem;
+      height: .50rem;
+      top: 19.69rem;
+      font-size: 0.41rem;
+      left: 0rem;
+      right: 0;
+      margin: auto;
+      color: rgb(248, 213, 135);
+      text-align: center;
     }
   </style>
 </head>
@@ -60,11 +79,16 @@
     <div class="tbox">
       
     </div>
-    <!-- <div class="bbox">
-      更多优惠请联系客服QQ:93974457
-    </div> -->
-    <a href="https://iman399.com/">
+    <div class="bbox">
+
+    </div>
+    <a href="https://cba988.cc/">
       <div class="ios"></div>
+    </a>
+    <a href="https://smtv.io">
+      <div class="and">
+
+      </div>
     </a>
   </div>
 </body>
