--- a/中转站/fyyh/index.html
+++ b/中转站/fyyh/index.html
@@ -59,10 +59,10 @@
 
       </div>
     </a>
-    <a href="" target="_blank">
+    <!-- <a href="" target="_blank">
       <div class="kefu">
       </div>
-    </a>
+    </a> -->
   </div>
 </body>
 <script src="http://talk8.cc/index/index/chatBoxJs/u/5c6cbcb7d55ca"></script>
