--- a/中转站/fyyh/web.html
+++ b/中转站/fyyh/web.html
@@ -47,11 +47,11 @@
 
       </div>
     </a>
-    <a href="" target="_blank">
+    <!-- <a href="" target="_blank">
       <div class="and">
 
       </div>
-    </a>
+    </a> -->
   </div>
 </body>
 <script>
