--- a/中转站/fyyh/index.html
+++ b/中转站/fyyh/index.html
@@ -63,9 +63,12 @@
       <div class="kefu">
       </div>
     </a> -->
+    <div >
+      <iframe src="./chat/chat.html" frameborder="0"></iframe>
+    </div>
   </div>
 </body>
-<script src="http://talk8.cc/index/index/chatBoxJs/u/5c6cbcb7d55ca"></script>
+<!-- <script src="http://talk8.cc/index/index/chatBoxJs/u/5c6cbcb7d55ca"></script>
 
 <script>
   whisperChat.init({
@@ -73,7 +76,7 @@
     uName: '小天客服',
     avatar: 'http://talk8.cc/customer.jpeg'
   });
-</script>
+</script> -->
 <script>
   window.onresize = function () {
     init()
