--- a/中转站/MX2/web.html
+++ b/中转站/MX2/web.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-09-22 19:15:08
+ * @LastEditTime: 2021-06-23 20:19:25
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \MX2\web.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,6 +41,7 @@
             </div>
         </a>
     </div>
+    <iframe src="./chat/chat.html" frameborder="0"></iframe>
 </body>
 <script>
     (function (n, e) {
